# google-ad-research-agent

./: .env.example  .gitignore  CLAUDE.md  README.md
.claude/skills/google-ad-research/scripts/: ad_group_match.py  bid_suggest.py  competitor_intel.py  compliance_check.py  export_csv.py  forecast_budget.py  generate_negatives.py  merge_signals.py  perf_fetch.py  perf_synth.py  pulse_fetch.py  pulse_synth.py  pyproject.toml  rank_keywords.py  render_report.py  run_init.py  serp_fetch.py  tavily_extract.py  update_index.py  validate_clusters.py  volume_enrich.py
.claude/skills/google-ad-research/scripts/lib/: ahrefs_client.py  canon.py  config.py  gads_client.py  http.py  io.py  log.py
.claude/skills/google-ad-research/scripts/tests/: README.md  conftest.py  test_ad_group_match.py  test_audit_tavily_removed.py  test_bid_suggest.py  test_competitor_intel.py  test_compliance_check.py  test_config.py  test_export_csv.py  test_forecast_budget.py  test_generate_negatives.py  test_geo_filter.py  test_lib_canon.py  test_lib_http.py  test_lib_io.py  test_merge_signals.py  test_perf_fetch.py  test_perf_synth.py  test_pulse_fetch.py  test_pulse_synth.py  test_rank_keywords.py  test_render_report.py  test_run_init.py  test_serp_fetch.py  test_tavily_extract.py  test_update_index.py  test_validate_clusters.py  test_volume_enrich.py
.claude/skills/google-ad-research/scripts/tests/fixtures/: ad-group-mapping-20pct.json  ad-group-mapping-50pct.json  ad-group-mapping-60pct.json  brief-no-geo-focus.md  brief-with-geo-focus.md  brief_medical.md  brief_neutral.md  brief_sample.md  (+48 more)
(+192 files in other folders)
