[project]
name = "google-ad-research-scripts"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
    "httpx-retries>=0.5",
    "python-dotenv>=1.0",
    "python-slugify>=8.0",
    "tabulate>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
